	 data bytes.
20050402 microdrive.c: don't check bad blocks when checksumming (part of
	 patch #1161364) (Gergely Szasz).
20050409 libspectrum.h.in,tape.c: add libspectrum_tape_{insert,remove}_block
	 routines.
20050430 internals.h,sna.c,snapshot.c,z80.c: add wrappers so that
	 libspectrum_snap_read doesn't have to call deprecated functions.
20050507 bzip2.c,creator.c,crypto.c,internals.h,rzx.c,tzx_read.c,
	 tzx_write.c: fix up gcc 4.0 signedness warnings (fixes bug
	 #1197013).
20050517 make-perl.c, myglib.c: add g_slist_delete_link, g_slist_insert,
         g_slist_length, GINT_TO_POINTER and GPOINTER_TO_INT to the glib
         emulation layer (Fred).
20050922 creator.c,libspectrum.h.in,tape_accessors.txt,tape_block.h,
         tzx_read.c,tzx_write.c,doc/libspectrum.txt: API changes for gcc 4.0
         signed char conversion warnings (patch #1197351) (Fred).
20051029 timings.c: timing tweak for TC2048 (Fred)
20051031 ide.c: improved IDE emulation for use with Demfir (Matthew
	 Westcott).
20051220 Makefile.am,libspectrum.c,libspectrum.h.in,tape.c,tape_block.[ch],
	 z80em.c: support for Z80Em and CSW files (patch #1357700)
	 (Darren).
20051224 autogen.sh: add --automake to libtoolize invocation (Markus
         Obermuller). Remove --copy on automake.
20060718 tape.c: add block description for RLE blocks (Fred).
20060812 libspectrum.h.in,tape_block.c,doc/libspectrum.txt: add
	 libspectrum_tape_block_metadata() function (needed to fix North
	 and South and Super Hang-On; see bug #1531346).
20070101 rzx.c: when rolling back, don't stop recording until we know
	 that the required snapshot exists.
20070102 tape.c,tape_block.[ch],tzx_read.c: stub support for TZX
	 "Generali[sz]ed Data" blocks (ID 0x19).
20070102 Makefile.am,internals.h,libspectrum.h.in,tape_accessors.{pl,txt},
	 tape_block.[ch], tape_set.pl, tzx_read.c: sufficient 0x19
	 functionality to allow tzxlist to do something with these blocks.